[gd_scene load_steps=24 format=3 uid="uid://bab7ekr4d1far"]

[ext_resource type="StyleBox" path="res://Assets2D/Theme/broadBorderWhite.tres" id="1"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIBGNBlack.tres" id="2"]
[ext_resource type="Script" path="res://MGF Scene/Formation/PlayerCard.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://di1r56ngy3qhu" path="res://Assets2D/PlayerIcon/Low/00026-1267103833.png" id="4"]
[ext_resource type="Texture2D" uid="uid://chitbtbfs1igu" path="res://Assets2D/UI/IconLock.png" id="5"]
[ext_resource type="FontFile" uid="uid://digsjq1ccbknq" path="res://Assets2D/Fonts/FiraSansFont/FiraSans-Medium.otf" id="6"]
[ext_resource type="PackedScene" path="res://MGF Scene/RadarChart/RadarChartStats.tscn" id="7"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIN.tres" id="8"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIP.tres" id="9"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UIBig.tres" id="10"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIBGOBorder.tres" id="11"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIBGO.tres" id="12"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UI.tres" id="13"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UIOutline.tres" id="14"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRedCN.tres" id="15"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRedCP.tres" id="16"]
[ext_resource type="Texture2D" uid="uid://bxf7q3bejk4q8" path="res://Assets2D/UI/iconExit.png" id="17"]
[ext_resource type="Texture2D" uid="uid://cijbcg8vj174m" path="res://Assets2D/UI/IconFiveStar.png" id="18"]
[ext_resource type="Texture2D" uid="uid://ddj22sdohmmkm" path="res://Assets2D/UI/IconVoice.png" id="19"]
[ext_resource type="PackedScene" path="res://addons/ACVoice/ACVoicebox.tscn" id="20"]
[ext_resource type="Texture2D" uid="uid://osjx1nkex63o" path="res://Assets2D/UI/IconCoin.png" id="21"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUINO.tres" id="22"]

[sub_resource type="FontFile" id="14"]
fallbacks = Array[Font]([ExtResource("6")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/40/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/35/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/35/0 = Vector2(0, 0)

[node name="PlayerCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="BG" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = ExtResource("2")

[node name="PanelN" type="Panel" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.107143
anchor_top = 0.0772947
anchor_right = 0.892857
anchor_bottom = 0.927536
theme_override_styles/panel = ExtResource("22")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.107143
anchor_top = 0.0772947
anchor_right = 0.892857
anchor_bottom = 0.927536
theme_override_styles/panel = ExtResource("11")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
anchor_top = 0.231884
anchor_right = 1.0
anchor_bottom = 0.879227
texture = ExtResource("4")
stretch_mode = 5

[node name="Active" type="TextureRect" parent="."]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
anchor_top = 0.270531
anchor_right = 1.0
anchor_bottom = 0.811594
texture = ExtResource("5")
stretch_mode = 3

[node name="StatsHeadLabel" type="Control" parent="."]
anchors_preset = 0
anchor_left = 0.125
anchor_top = 0.154589
anchor_right = 0.359933
anchor_bottom = 0.202899
offset_right = -4.99969

[node name="Label" type="Label" parent="StatsHeadLabel"]
layout_mode = 0
anchor_top = 0.0249996
anchor_right = 0.384615
anchor_bottom = 0.949984
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
text = "Label"
vertical_alignment = 1

[node name="Label2" type="Label" parent="StatsHeadLabel"]
layout_mode = 0
anchor_left = 0.384615
anchor_top = 0.0249996
anchor_right = 0.865384
anchor_bottom = 0.949984
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
text = "Stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="StatsHeadLabel"]
layout_mode = 0
anchor_left = 0.860576
anchor_top = 0.0249996
anchor_right = 0.999999
anchor_bottom = 0.949984
offset_right = 3.05176e-05
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
text = "Max"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.125
anchor_top = 0.21256
anchor_right = 0.209821
anchor_bottom = 0.859903
theme_override_constants/separation = 10

[node name="Label1" type="Label" parent="LabelVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Overall"
vertical_alignment = 1

[node name="Label2" type="Label" parent="LabelVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Finishing"
vertical_alignment = 1

[node name="Label3" type="Label" parent="LabelVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "ShotPower"
vertical_alignment = 1

[node name="Label4" type="Label" parent="LabelVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Speed"
vertical_alignment = 1

[node name="Label5" type="Label" parent="LabelVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Accurate"
vertical_alignment = 1

[node name="Label6" type="Label" parent="LabelVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "BallControl"
vertical_alignment = 1

[node name="Label7" type="Label" parent="LabelVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Stamina"
vertical_alignment = 1

[node name="Label8" type="Label" parent="LabelVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Power"
vertical_alignment = 1

[node name="Label9" type="Label" parent="LabelVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Body"
vertical_alignment = 1

[node name="Label10" type="Label" parent="LabelVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Intercep"
vertical_alignment = 1

[node name="Label11" type="Label" parent="LabelVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Defend"
vertical_alignment = 1

[node name="Label12" type="Label" parent="LabelVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Save"
vertical_alignment = 1

[node name="Label13" type="Label" parent="LabelVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Reflexes"
vertical_alignment = 1

[node name="StatsVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.214286
anchor_top = 0.21256
anchor_right = 0.321429
anchor_bottom = 0.859903
theme_override_constants/separation = 10

[node name="Stats1" type="ProgressBar" parent="StatsVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="Stats3" type="ProgressBar" parent="StatsVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="Stats4" type="ProgressBar" parent="StatsVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="Stats5" type="ProgressBar" parent="StatsVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="Stats6" type="ProgressBar" parent="StatsVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="Stats7" type="ProgressBar" parent="StatsVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="Stats8" type="ProgressBar" parent="StatsVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="Stats9" type="ProgressBar" parent="StatsVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="Stats10" type="ProgressBar" parent="StatsVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="Stats11" type="ProgressBar" parent="StatsVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="Stats12" type="ProgressBar" parent="StatsVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="Stats13" type="ProgressBar" parent="StatsVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="Stats14" type="ProgressBar" parent="StatsVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="ValueVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.214286
anchor_top = 0.21256
anchor_right = 0.321429
anchor_bottom = 0.859903
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ValueVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Overall"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ValueVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Finishing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="ValueVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "ShotPower"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="ValueVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Speed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="ValueVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Accurate"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="ValueVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "BallControl"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="ValueVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Stamina"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label8" type="Label" parent="ValueVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Power"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label9" type="Label" parent="ValueVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Body"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label10" type="Label" parent="ValueVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Intercep"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label11" type="Label" parent="ValueVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Defend"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label12" type="Label" parent="ValueVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Save"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label13" type="Label" parent="ValueVBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "Reflexes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.325893
anchor_top = 0.202899
anchor_right = 0.357143
anchor_bottom = 0.864734
theme_override_constants/separation = -2

[node name="Label1" type="Label" parent="BoxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="BoxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="BoxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="BoxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="BoxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="BoxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="BoxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label8" type="Label" parent="BoxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label9" type="Label" parent="BoxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label10" type="Label" parent="BoxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label11" type="Label" parent="BoxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label12" type="Label" parent="BoxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label13" type="Label" parent="BoxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = ExtResource("1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.325893
anchor_top = 0.202899
anchor_right = 0.357143
anchor_bottom = 0.864734
theme_override_constants/separation = -2

[node name="Label1" type="Label" parent="MaxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="MaxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="MaxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="MaxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="MaxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="MaxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="MaxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label8" type="Label" parent="MaxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label9" type="Label" parent="MaxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label10" type="Label" parent="MaxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label11" type="Label" parent="MaxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label12" type="Label" parent="MaxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label13" type="Label" parent="MaxVBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
anchor_top = 0.0386473
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("10")
theme_override_font_sizes/font_size = 50
theme_override_styles/tab_selected = ExtResource("9")
theme_override_styles/tab_unselected = ExtResource("8")
theme_override_styles/tab_disabled = ExtResource("8")
theme_override_styles/panel = ExtResource("12")
tab_alignment = 1

[node name="Control" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Control3" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="ACVoicebox" parent="." instance=ExtResource("20")]
bus = &"MatchVoice"

[node name="Main" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.107143
anchor_top = 0.125604
anchor_right = 0.892857
anchor_bottom = 0.925121
theme_override_styles/panel = ExtResource("12")

[node name="RadarChartStats" parent="Main" instance=ExtResource("7")]
layout_mode = 1
anchor_left = 0.767045
anchor_top = 0.627841
anchor_right = 0.892045
anchor_bottom = 0.877841
offset_left = 0.000976563
offset_top = 0.369232
offset_right = -95.9989
offset_bottom = -88.1308
scale = Vector2(2.2, 2.2)

[node name="Popular" type="TextureProgressBar" parent="Main"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_right = 128.0
offset_bottom = 72.0
value = 100.0
nine_patch_stretch = true
texture_progress = ExtResource("18")

[node name="Name" type="Label" parent="Main"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -224.0
offset_top = 24.0
offset_right = 224.0
offset_bottom = 128.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = SubResource("14")
theme_override_font_sizes/font_size = 35
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="BtnVoice" type="Button" parent="Main"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = 144.0
offset_top = 16.0
offset_right = 208.0
offset_bottom = 80.0
theme_override_styles/normal = ExtResource("15")
theme_override_styles/hover = ExtResource("16")
theme_override_styles/pressed = ExtResource("16")
theme_override_styles/disabled = ExtResource("15")
theme_override_styles/focus = ExtResource("16")
icon = ExtResource("19")
expand_icon = true

[node name="Label" type="Label" parent="Main/BtnVoice"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -24.0
offset_right = 136.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("14")
vertical_alignment = 1

[node name="ButtonClose" type="Button" parent="Main"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_top = -24.0
offset_right = -16.0
offset_bottom = 48.0
theme_override_styles/normal = ExtResource("15")
theme_override_styles/hover = ExtResource("16")
theme_override_styles/pressed = ExtResource("16")
theme_override_styles/disabled = ExtResource("15")
theme_override_styles/focus = ExtResource("16")
icon = ExtResource("17")
expand_icon = true

[node name="ButtonBuy" type="Button" parent="Main"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -86.0
offset_right = 104.0
offset_bottom = -14.0
theme_override_fonts/font = ExtResource("13")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("9")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("9")
text = "Buy"
icon = ExtResource("21")
expand_icon = true

[connection signal="tab_selected" from="TabContainer" to="." method="_on_TabContainer_tab_selected"]
[connection signal="pressed" from="Main/BtnVoice" to="." method="_on_BtnVoice_pressed"]
[connection signal="pressed" from="Main/ButtonClose" to="." method="_on_ButtonClose_pressed"]
